# labWorks-2021-0372

./: .gitignore  KavtorinDD  lab_1  lab_1.cpp
AboghanemAO/: fio.txt
AboghanemAO/coursework/: coursework.cpp
AboghanemAO/lab_1/: lab_1.cpp
ArevaloPCA/: fio.txt
ArevaloPCA/Lab_1/: lab_1.cpp
ChernitskayaED/: fio.txt
ChernitskayaED/lab_1/: main.cpp
GorbachevNS/lab_1/: lab_1.cpp
GorbachevNS/lab_1(remade)/: lab_1.cpp
HaikoMA/: fio.txt
HaikoMA/lab_1/: lab1.cpp
IudinaAA/: fio.txt
IudinaAA/lab_1/: main.cpp
KarvatAV/: fio.txt.txt
KarvatAV/lab_1/: main.txt.txt
KavtorinDD/course_work/: Калькулятор.cpp
KhlebnikovAA/lab_1/: lab_1.cpp
KimYM/: fio.txt
KimYM/lab_1/: KimYM_lab_1.cpp
KonkovDS/lab_1/: lab_1.cpp
KozlovaVI/kursach/: kursach.cpp
KozlovaVI/lab_1/: lab1.cpp
MaslennikovKM/: fio.txt
MaslennikovKM/lab_1/: lab_1.cpp
MohamedAA/: fio.txt
MohamedAA/Lab1/: main.cpp
MohamedAA/cours work/: main.cpp
PaxarevskayaES/: fio.txt
PaxarevskayaES/coursework/: figure.cpp  figure.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintscene.cpp  paintscene.h  romb.cpp  romb.h  square.cpp  square.h  triangle.cpp  triangle.h
PaxarevskayaES/lab_1/: my_lab1.cpp
SilchenkoVV/lab_1/: main.cpp
SkatkovAM/list/: List.h  main.cpp
SuzaevAA/lab_1/: main.cpp
ZhukovVA/: fio.txt
ZhukovVA/coursework/: additions.cpp  additions.h  classes.cpp  classes.h  compiled_project.txt  main.cpp  (+4 more)
coursework/: CMakeLists.txt  main.cpp
coursework/include/: integer.hpp  rationals.hpp
coursework/src/: integer.cpp  rationals.cpp
lab_1/: Lubimova_lab_1.cpp
(+5 files in other folders)
